assignment_6/tests/pass/lexical/1/pass2.ram15
class Test2 {
    public static void main(String[] a) {
        Test2Class().method1();
        Test2Class().method2();
    }
}//a single line comment

class Test2Class {
    public void method1() { 
        print(5);
    }
/*
#$%?
**
*
/
*/
    public void method2(){
/*

*/
        print(6);
/*
*
*/

    }
}